--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -38,7 +39,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.3.3.jar-1}
+    ${file.reference.jcalendar-1.3.3.jar-1}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
