--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,6 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
 file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\Dell\\Desktop\\Cours\\2\u00e9me\\PIDV\\jcalendar-1.3.3.jar
-file.reference.JTattoo-1.6.9.jar=C:\\Users\\user\\Downloads\\JTattoo-1.6.9.jar
 file.reference.mail-1.4.1.jar=C:\\Users\\Dell\\Desktop\\Cours\\2\u00e9me\\PIDV\\mail-1.4.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -43,8 +42,7 @@ javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.mail-1.4.1.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.beans-binding.classpath}:\
-    ${file.reference.JTattoo-1.6.9.jar}
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
